# WebcamServer

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  Main.cpp
